[package]
name = "list1"
version = "0.1.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "local-search",
]

[dependencies]
local-search = { path = "./local-search" }
clap = { git = "https://github.com/clap-rs/clap/" }
